button small size fix

--- a/components/Button/Button.scss
+++ b/components/Button/Button.scss
@@ -45,8 +45,8 @@
     }
 
     .button {
-        .size-small {
-            padding: 7px 0;
+        &.size-small {
+            padding: 7px 20px;
         }
     }
 }
